--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,3 @@
-```html
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -83,13 +82,32 @@
 
   <!-- نافذة عرض الوصف -->
   <div class="modal fade" id="descModal" tabindex="-1">
-    <div class="modal-dialog modal-lg">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="descTitle"></h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
         </div>
         <div class="modal-body" id="descContent" style="white-space: pre-wrap; text-align: justify;"></div>
+      </div>
+    </div>
+  </div>
+
+  <!-- نافذة كلمة المرور -->
+  <div class="modal fade" id="passwordModal" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">🔐 الدخول إلى لوحة التحكم</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body">
+          <input type="password" id="dashboardPassword" class="form-control" placeholder="أدخل كلمة المرور">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">إلغاء</button>
+          <button type="button" class="btn btn-primary" id="confirmDashboardAccess">دخول</button>
+        </div>
       </div>
     </div>
   </div>
@@ -190,34 +208,39 @@ function populateDepartmentOptions() {
   });
 }
 
-async function requestDashboardAccess() {
-  const passwordInput = document.createElement('input');
-  passwordInput.type = 'password';
-  passwordInput.placeholder = 'أدخل كلمة المرور';
-  passwordInput.classList.add('form-control', 'mb-2');
+function requestDashboardAccess() {
+  const modal = new bootstrap.Modal(document.getElementById('passwordModal'));
+  modal.show();
+  const passwordInput = document.getElementById('dashboardPassword');
+  setTimeout(() => passwordInput.focus(), 300);
 
-  const confirmBtn = document.createElement('button');
-  confirmBtn.textContent = 'دخول';
-  confirmBtn.classList.add('btn', 'btn-primary');
+  // عند الضغط على Enter
+  passwordInput.addEventListener('keydown', function(e) {
+    if (e.key === 'Enter') {
+      document.getElementById('confirmDashboardAccess').click();
+    }
+    if (e.key === 'Escape') {
+      modal.hide();
+    }
+  });
 
-  const modalDiv = document.createElement('div');
-  modalDiv.classList.add('p-3');
-  modalDiv.appendChild(passwordInput);
-  modalDiv.appendChild(confirmBtn);
-
-  const modal = new bootstrap.Modal(document.createElement('div'));
-  document.body.appendChild(modalDiv);
-
-  confirmBtn.onclick = async () => {
-    const response = await fetch(`${API_BASE}/api/verify-password`, {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ password: passwordInput.value })
-    });
-    if (response.ok) {
-      window.location.href = 'dashboard.html';
-    } else {
-      alert('❌ كلمة المرور غير صحيحة');
+  document.getElementById('confirmDashboardAccess').onclick = async () => {
+    const password = passwordInput.value.trim();
+    if (!password) return;
+    try {
+      const response = await fetch(`${API_BASE}/api/verify-password`, {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ password })
+      });
+      if (response.ok) {
+        modal.hide();
+        window.location.href = 'dashboard.html';
+      } else {
+        alert('❌ كلمة المرور غير صحيحة');
+      }
+    } catch (err) {
+      alert('❌ حدث خطأ في الاتصال بالخادم');
     }
   };
 }
@@ -233,4 +256,3 @@ fetchVideos();
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-```
