--- a/public/add.html
+++ b/public/add.html
@@ -46,7 +46,7 @@
     </form>
 
     <div class="text-center mt-3">
-      <a href="edit.html" class="btn btn-outline-secondary">الذهاب إلى تعديل الفيديوهات</a>
+      <a href="edit.html" class="btn btn-outline-secondary">تعديل الفيديوهات</a>
       <a href="dashboard.html" class="btn btn-outline-info ms-2">لوحة التحكم</a>
     </div>
 
