--- a/public/backups.html
+++ b/public/backups.html
@@ -28,7 +28,7 @@
   <div class="container">
     <div class="d-flex justify-content-between align-items-center mb-4">
       <h3>النسخ الاحتياطية</h3>
-      <a href="dashboard.html" class="btn btn-outline-info">العودة إلى لوحة التحكم</a>
+      <a href="dashboard.html" class="btn btn-outline-info">لوحة التحكم</a>
     </div>
 
     <div class="d-flex gap-2 mb-3">
