--- a/public/index.html
+++ b/public/index.html
@@ -115,6 +115,7 @@
 <script>
 const API_BASE = 'https://video-dashboard-backend.onrender.com';
 let videos = [];
+let passwordModalInstance = null;
 
 async function fetchVideos() {
   try {
@@ -210,10 +211,15 @@ function populateDepartmentOptions() {
 
 function requestDashboardAccess() {
   const modalEl = document.getElementById('passwordModal');
-  const modal = new bootstrap.Modal(modalEl);
-  modal.show();
 
-  // عند اكتمال فتح المودال
+  if (passwordModalInstance && modalEl.classList.contains('show')) {
+    passwordModalInstance.hide();
+    return;
+  }
+
+  passwordModalInstance = new bootstrap.Modal(modalEl);
+  passwordModalInstance.show();
+
   modalEl.addEventListener('shown.bs.modal', () => {
     const passwordInput = document.getElementById('dashboardPassword');
     passwordInput.setAttribute('lang', 'en');
@@ -224,7 +230,7 @@ function requestDashboardAccess() {
         document.getElementById('confirmDashboardAccess').click();
       }
       if (e.key === 'Escape') {
-        modal.hide();
+        passwordModalInstance.hide();
       }
     });
   });
@@ -239,7 +245,7 @@ function requestDashboardAccess() {
         body: JSON.stringify({ password })
       });
       if (response.ok) {
-        modal.hide();
+        passwordModalInstance.hide();
         window.location.href = 'dashboard.html';
       } else {
         alert('❌ كلمة المرور غير صحيحة');
@@ -257,6 +263,14 @@ document.getElementById('departmentSelect').addEventListener('change', () => {
 document.getElementById('searchInput').addEventListener('input', renderVideos);
 
 fetchVideos();
+
+// 📌 فتح/إغلاق نافذة كلمة المرور عند الضغط على Alt
+document.addEventListener('keydown', function(e) {
+  if (e.key === 'Alt') {
+    e.preventDefault();
+    requestDashboardAccess();
+  }
+});
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
