--- a/public/index.html
+++ b/public/index.html
@@ -65,14 +65,19 @@
       cursor: pointer;
       margin-top: 6px;
     }
+    /* الزر الثابت */
+    .dashboard-btn-fixed {
+      position: fixed;
+      top: 20px;
+      left: 20px;
+      z-index: 1050;
+    }
   </style>
 </head>
 <body>
   <div class="container text-center">
     <h3 class="mb-4">اختر القسم لعرض الفيديوهات</h3>
-    <div class="mb-3 d-flex justify-content-center gap-3">
-      <button class="btn btn-warning" onclick="requestDashboardAccess()">🔐 لوحة التحكم</button>
-    </div>
+    <button class="btn btn-warning dashboard-btn-fixed" onclick="requestDashboardAccess()">🔐 لوحة التحكم</button>
     <select id="departmentSelect" class="form-select mb-3">
       <option value="">-- اختر القسم --</option>
     </select>
@@ -82,7 +87,7 @@
 
   <!-- نافذة عرض الوصف -->
   <div class="modal fade" id="descModal" tabindex="-1">
-    <div class="modal-dialog modal-lg modal-dialog-centered">
+    <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="descTitle"></h5>
@@ -93,29 +98,9 @@
     </div>
   </div>
 
-  <!-- نافذة كلمة المرور -->
-  <div class="modal fade" id="passwordModal" tabindex="-1">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">🔐 الدخول إلى لوحة التحكم</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-        </div>
-        <div class="modal-body">
-          <input type="password" id="dashboardPassword" class="form-control" placeholder="أدخل كلمة المرور">
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">إلغاء</button>
-          <button type="button" class="btn btn-primary" id="confirmDashboardAccess">دخول</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
 <script>
 const API_BASE = 'https://video-dashboard-backend.onrender.com';
 let videos = [];
-let passwordModalInstance = null;
 
 async function fetchVideos() {
   try {
@@ -209,51 +194,21 @@ function populateDepartmentOptions() {
   });
 }
 
-function requestDashboardAccess() {
-  const modalEl = document.getElementById('passwordModal');
-
-  if (passwordModalInstance && modalEl.classList.contains('show')) {
-    passwordModalInstance.hide();
-    return;
-  }
-
-  passwordModalInstance = new bootstrap.Modal(modalEl);
-  passwordModalInstance.show();
-
-  modalEl.addEventListener('shown.bs.modal', () => {
-    const passwordInput = document.getElementById('dashboardPassword');
-    passwordInput.setAttribute('lang', 'en');
-    passwordInput.focus();
-
-    passwordInput.addEventListener('keydown', function(e) {
-      if (e.key === 'Enter') {
-        document.getElementById('confirmDashboardAccess').click();
-      }
-      if (e.key === 'Escape') {
-        passwordModalInstance.hide();
-      }
+async function requestDashboardAccess() {
+  try {
+    const response = await fetch(`${API_BASE}/api/verify-password`, {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ password: prompt("🔐 من فضلك أدخل كلمة المرور للوصول إلى لوحة التحكم:") })
     });
-  });
-
-  document.getElementById('confirmDashboardAccess').onclick = async () => {
-    const password = document.getElementById('dashboardPassword').value.trim();
-    if (!password) return;
-    try {
-      const response = await fetch(`${API_BASE}/api/verify-password`, {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ password })
-      });
-      if (response.ok) {
-        passwordModalInstance.hide();
-        window.location.href = 'dashboard.html';
-      } else {
-        alert('❌ كلمة المرور غير صحيحة');
-      }
-    } catch (err) {
-      alert('❌ حدث خطأ في الاتصال بالخادم');
+    if (response.ok) {
+      window.location.href = 'dashboard.html';
+    } else {
+      alert('❌ كلمة المرور غير صحيحة');
     }
-  };
+  } catch (err) {
+    alert('❌ حدث خطأ في الاتصال بالخادم');
+  }
 }
 
 document.getElementById('departmentSelect').addEventListener('change', () => {
@@ -263,14 +218,6 @@ document.getElementById('departmentSelect').addEventListener('change', () => {
 document.getElementById('searchInput').addEventListener('input', renderVideos);
 
 fetchVideos();
-
-// 📌 فتح/إغلاق نافذة كلمة المرور عند الضغط على Alt
-document.addEventListener('keydown', function(e) {
-  if (e.key === 'Alt') {
-    e.preventDefault();
-    requestDashboardAccess();
-  }
-});
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
