--- a/public/add.html
+++ b/public/add.html
@@ -4,11 +4,13 @@
   <meta charset="UTF-8">
   <title>إضافة فيديو</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
+  <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
   <style>
     body { padding: 30px; background-color: #f2f4f8; font-family: 'Segoe UI', sans-serif; }
     .form-section { background: white; padding: 20px; border-radius: 12px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); max-width: 600px; margin: auto; }
     #preview { margin-top: 20px; position: relative; }
     iframe, video { width: 100%; height: 360px; border: none; }
+    #descriptionEditor { height: 120px; }
   </style>
 </head>
 <body>
@@ -21,7 +23,7 @@
       </div>
       <div class="mb-3">
         <label class="form-label">وصف الفيديو</label>
-        <textarea class="form-control" id="description" rows="2"></textarea>
+        <div id="descriptionEditor"></div>
       </div>
       <div class="mb-3">
         <label class="form-label">رابط الفيديو</label>
@@ -52,6 +54,13 @@
 
     <div id="confirmation" class="alert alert-success mt-3 d-none"></div>
   </div>
+
+<script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
+<script>
+const quill = new Quill('#descriptionEditor', {
+  theme: 'snow'
+});
+</script>
 
 <script>
 const API_BASE = 'https://video-dashboard-backend.onrender.com';
@@ -146,7 +155,7 @@ document.getElementById('videoForm').addEventListener('submit', async e => {
   e.preventDefault();
   const title = document.getElementById('title').value;
   const url = document.getElementById('url').value;
-  const description = document.getElementById('description').value;
+  const description = quill.root.innerHTML;
   const department = document.getElementById('department').value;
 
   const response = await fetch(`${API_BASE}/api/videos`, {
@@ -158,6 +167,7 @@ document.getElementById('videoForm').addEventListener('submit', async e => {
     document.getElementById('confirmation').textContent = '✅ تم إضافة الفيديو بنجاح';
     document.getElementById('confirmation').classList.remove('d-none');
     document.getElementById('videoForm').reset();
+    quill.setContents([]);
     document.getElementById('preview').innerHTML = '';
     loadDepartments();
   } else {
